tests/ui/dyn-compatibility/no-static.stderr
error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/no-static.rs:8:22
   |
LL | fn diverges() -> Box<dyn Foo> {
   |                      ^^^^^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/no-static.rs:5:8
   |
LL | trait Foo {
   |       --- this trait is not dyn compatible...
LL |     fn foo() {}
   |        ^^^ ...because associated function `foo` has no `self` parameter
   = help: only type `Bar` implements `Foo`; consider using it directly instead.
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL |     fn foo(&self) {}
   |            +++++
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL |     fn foo() where Self: Sized {}
   |              +++++++++++++++++

error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/no-static.rs:18:12
   |
LL |     let b: Box<dyn Foo> = Box::new(Bar);
   |            ^^^^^^^^^^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/no-static.rs:5:8
   |
LL | trait Foo {
   |       --- this trait is not dyn compatible...
LL |     fn foo() {}
   |        ^^^ ...because associated function `foo` has no `self` parameter
   = help: only type `Bar` implements `Foo`; consider using it directly instead.
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL |     fn foo(&self) {}
   |            +++++
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL |     fn foo() where Self: Sized {}
   |              +++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
